Fix to stop breadcrumb position from jumping in mobile view * Breadcrumbs would shift position in mobile view when switching   to the floating breadcrumbs.

--- a/app/scss/epochtalk/epochtalk.scss
+++ b/app/scss/epochtalk/epochtalk.scss
@@ -828,6 +828,10 @@ form .input-section:last-child {margin-bottom: 0px; }
     margin-top: 0px;
   }
 
+  #header .fixed ul {
+    padding: 0px;
+  }
+
   .footer {
     ul {
       margin-bottom: 1rem;
